@@ -11,8 +11,8 @@
 }
 
 % do not mess with the 2 lines below, they are written by make dist
-\release{2.7.3}
-\date{May 12, 2001}
+\release{2.7.4}
+\date{May 28, 2001}
 
 \makeindex			% tell \index to actually write the .idx file
 \makemodindex			% If this contains a lot of module sections.
